tests/NormalTests/paczka1/small_fuzzy/33163215.err
Error in line 5: i95f S240 34,4
Error in line 9: qcO A696 60,63
Error in line 12: 0vaY1 A417 98,2
